--- a/sites/all/themes/tgf/css/base.css
+++ b/sites/all/themes/tgf/css/base.css
@@ -163,11 +163,7 @@
 	input[type="password"]:focus,
 	input[type="email"]:focus,
 	textarea:focus {
-		border: 1px solid #aaa;
- 		color: #444;
- 		-moz-box-shadow: 0 0 3px rgba(0,0,0,.2);
-		-webkit-box-shadow: 0 0 3px rgba(0,0,0,.2);
-		box-shadow:  0 0 3px rgba(0,0,0,.2); }
+		color: #444;}
 	textarea {
 		min-height: 60px; }
 	label,
