--- a/sites/all/themes/tgf/css/style.css
+++ b/sites/all/themes/tgf/css/style.css
@@ -176,12 +176,19 @@ a:hover, a:focus { color: #000; }
 
 /* Photo list
 ================================================== */
-.photo-list {margin: 40px 0;}
+.photo-list li {float: left; width: 210px; min-height: 280px;margin: 0 20px 20px 0; background: #f9f9f9; border-bottom: 4px solid #d73300;}
+.photo-list li h2 {font-size: 1.4em; margin: 0 10px 7px;}
+.photo-list li p {margin: 0 10px 5px; line-height: 1.2; color: #959595;}
+.photo-list li h2 a {color: #d73300; }
+.photo-list li .image-wrapper {position: relative; margin: 0 0 10px;}
+.photo-list li .image-wrapper a {background: url("../img/play.png") no-repeat 0 0; top: 60px; left: 60px; width: 86px; height: 85px; position: absolute; display: block;}
+
+/*.photo-list {margin: 40px 0;}
 .photo-list ul li {float: left; margin: 0 20px 20px 0; position: relative; width: 210px;}
 .photo-list ul li h2 {font-size: 1.4em; margin: 24px 10px 7px; }
 .photo-list ul li h2 a {color: #fff; opacity: 1;}
 .photo-list ul li p {margin: 0 10px 5px; line-height: 1.2; color: #959595;}
-.photo-content-wrapper {background: url("../img/photo-overlay.png") repeat-x 0 0; position: absolute; top: 0;  width: 100%; height: 100%;}
+.photo-content-wrapper {background: url("../img/photo-overlay.png") repeat-x 0 0; position: absolute; top: 0;  width: 100%; height: 100%;}*/
 
 
 /* #sidebar
